[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/childScenes/loseScene/loseScene.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/loseScreen/texts/english/you lose.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/loseScreen/texts/english/oh no.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/loseScreen/sickGirl.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/pause/texts/english/mainMenu.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/pause/texts/english/mainMenu(v2).png" type="Texture" id=6]

[sub_resource type="Animation" id=1]

resource_name = "lose"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("black_background:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("white_background:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Node2D" type="Node2D" index="0"]

pause_mode = 2
position = Vector2( 511.906, 299.98 )
scale = Vector2( 15.9827, 9.38549 )
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="black_background" type="ColorRect" parent="." index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.558 )
_sections_unfolded = [ "Focus", "Pause", "Visibility" ]

[node name="white_background" type="ColorRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
margin_right = -32.0
margin_bottom = -32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 0.259647 )
_sections_unfolded = [ "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

pause_mode = 2
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/lose = SubResource( 1 )
blend_times = [  ]
_sections_unfolded = [ "Pause" ]

[node name="youLose" type="Sprite" parent="." index="3"]

position = Vector2( 0.177509, 16.9858 )
scale = Vector2( 0.0682004, 0.11434 )
texture = ExtResource( 2 )

[node name="ohNo" type="Sprite" parent="." index="4"]

position = Vector2( -0.0831795, -19.3707 )
scale = Vector2( 0.0704831, 0.115203 )
texture = ExtResource( 3 )

[node name="sick" type="Sprite" parent="." index="5"]

position = Vector2( -0.000762939, -1.87023 )
scale = Vector2( 0.0168771, 0.0250635 )
texture = ExtResource( 4 )

[node name="mainMenu" type="TextureButton" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 21.0
margin_top = 27.0
margin_right = 31.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true
_sections_unfolded = [ "Textures" ]

[connection signal="mouse_entered" from="mainMenu" to="." method="_on_mainMenu_mouse_entered"]

[connection signal="pressed" from="mainMenu" to="." method="_on_mainMenu_pressed"]


